# resum-xenon

./: .gitignore  README copy.md  README.md  convert_csv_to_h5.py  process_xenon_original_vars.py  pyproject.toml  xenon_environment.yml
resum/conditional_neural_process/: conditional_neural_process_model.py  data_generator.py
resum/deep_gaussian_process_model/: __init__.py  multi_fidelity_deep_gaussian_process.py  multi_fidelity_deep_gaussian_process_old.py
resum/multi_fidelity_gaussian_process/: __init__.py  multi_fidelity_surrogate_model.py  multi_fidelity_visualizer.py
resum/polynomial_chaos_expansion/: __init__.py  bayes_pce_multi_fidelity_model.py  bayes_pce_multi_fidelity_visualizer.py
resum/utilities/: plotting_utils.py  plotting_utils_cnp.py  plotting_utils_legend.py  utilities.py
src/coherent/: settings.yaml
src/coherent/in/data/: preprocessing.py
src/run_cnp/: README_PREPROCESSING.md  cnp_training.py  conditional_neural_process_predict_coherent.ipynb  conditional_neural_process_predict_xenon.ipynb  conditional_neural_process_training_coherent.ipynb  conditional_neural_process_training_xenon.ipynb  preprocess_mixup.py
src/run_mfgp/: extract_highest_prediction.py  mfgp_visualizations.py  mfgp_xenon.ipynb  run_mfgp.py
src/xenon/: settings.yaml
